# CTOX

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Context-Optimizer-Simple.html  Context-Optimizer.html  HARNESS.md  NOTICE  README.md  SPEC_DECODING_BUGS.md  bios-vanilla-mockup.html  install.sh
.github/workflows/: ci.yml  release.yml
assets/prompts/: ctox_chat_system_prompt.md  ctox_codex_exec_simple_overlay.md  ctox_codex_exec_simple_phase_analysis_read_only.md  ctox_codex_exec_simple_phase_bug_fix.md  ctox_codex_exec_simple_phase_bug_fix_with_tests.md  ctox_codex_exec_simple_phase_code_review.md  ctox_codex_exec_simple_phase_data_change_safe.md  ctox_codex_exec_simple_phase_dependency_update.md  ctox_codex_exec_simple_phase_deploy_release.md  ctox_codex_exec_simple_phase_docs_text_change.md  ctox_codex_exec_simple_phase_feature_add.md  ctox_codex_exec_simple_phase_general_safe_task.md  ctox_codex_exec_simple_phase_incident_hotfix.md  ctox_codex_exec_simple_phase_incident_hotfix_deploy.md  ctox_codex_exec_simple_phase_infra_config_change.md  ctox_codex_exec_simple_phase_migration_change.md  ctox_codex_exec_simple_phase_migration_with_data_change.md  ctox_codex_exec_simple_phase_ops_debug_terminal.md  ctox_codex_exec_simple_phase_read_trace_first.md  ctox_codex_exec_simple_phase_refactor_safe.md  ctox_codex_exec_simple_phase_rollback_recovery.md  ctox_codex_exec_simple_phase_test_work.md  ctox_codex_exec_simple_small_step_core.md  ctox_codex_exec_simple_task_router.md  ctox_codex_exec_simple_terminal_ops_core.md  ctox_codex_exec_standard_overlay.md
benches/: README.md
benches/adaptive-rejection-sampler/: README.md
benches/configure-git-webserver/: README.md
benches/count-dataset-tokens/: README.md
benches/extract-elf/: README.md
benchmarks/airbnb_clone/: README.md  manifest.json
browser_agent/: README.md
browser_agent/extension/: COOP_SYNC_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  README.md  UI_UX_DESIGN_GUIDE.md  browser-tool-smoke.css  browser-tool-smoke.html  browser-tool-smoke.js  craft.css  craft.html  craft.js  manifest.json  manifest.reference.json  options-workspace.js  options.css  options.html  options.js  sidepanel.css  sidepanel.html  sidepanel.js
contracts/: clean_room_bootstrap_manifest.json  source_origins_manifest.json
contracts/bios/: bios.json
ctox-vllm-serve/: Cargo.toml  README.md
desktop/: Cargo.toml
docs/: architecture.md  clean-room-baseline.md  cli.md  index.md
engine/: README.md
local_crates/codex-shell-command/: Cargo.toml
scripts/: communication_jami_cli.mjs  communication_mail_cli.mjs  configure_model_policy.py  cto_install_bootstrap_tui_remote.exp  cto_mail_client.py  cto_remote_password.exp  cto_scp_password.exp  ctox_airbnb_clone_bench.py  ctox_airbnb_clone_bench.sh  ctox_build_self.sh  ctox_codex_live_probe.sh  ctox_context_stress.sh  ctox_loop_smoke.sh  ctox_terminal_baseline.sh  gpu4testrig_exec.exp  grosshirn_fallback_smoke.py  install_browser_agent_extension.sh  install_browser_engine.sh  install_cto_agent.sh  install_cto_agent_remote.sh  install_ctox.sh  install_ctox_remote.sh  install_linux_user_services.sh  jami_contact_qr_cli.mjs  jami_device_link_cli.mjs  kernel_stress_harness.py  launch_browser_agent_chrome.sh  lcm_parity_compare.mjs  lcm_reference_runner.ts  metricspace_remote_exec.exp  mock_kleinhirn.py  model_switch_smoke.sh  qwen35b_3gpu_striped.topology.yaml  qwen35b_tensor_inventory.py  remote_rebuild_ctox.sh  remote_rebuild_mistralrs.sh  remote_test_qwen35b_topology.sh  remote_validate_chat_presets.sh  remote_validate_legacy_chat_loads.sh  remote_validate_one_chat_preset.sh  (+8 more)
site/: cli.html  docs.html  index.html
src/: agentic.rs  app.rs  attach.rs  backend_manager.rs  bootstrap.rs  brain_runtime.rs  browser.rs  browser_agent_bridge.rs  browser_engine.rs  browser_subworkers.rs  channels.rs  chat_runtime.rs  codex_head_tail_buffer.rs  codex_text_encoding.rs  command_exec.rs  context_controller.rs  context_health.rs  context_stress.rs  contracts.rs  desktop_session.rs  execution_baseline.rs  follow_up.rs  governance.rs  lcm.rs  lifecycle.rs  main.rs  mission_governor.rs  model_catalog_boundary_tests.rs  pages.rs  paths.rs  persistence.rs  plan.rs  queue.rs  responses_proxy.rs  review.rs  runtime_config.rs  runtime_db.rs  runtime_planner.rs  schedule.rs  scrape.rs  (+7 more)
tests/: README.md  channels_core.rs  context_health_core.rs  durable_queue.rs  follow_up_core.rs  governance_core.rs  lcm_core.rs  plan_core.rs  proxy_e2e.rs  qualification_gate.rs  schedule_core.rs  scrape_core.rs  service_surface.rs  test_configure_model_policy.py  verification_core.rs
tools/: README.md
tools/model-runtime/cli/: Cargo.toml
tools/model-runtime/cli/src/args/: mod.rs  model.rs  paged_attn.rs  quantize.rs  server.rs
tools/model-runtime/cli/src/commands/: bench.rs  cache.rs  config.rs  doctor.rs  login.rs  mod.rs  quantize.rs  serve.rs  tune.rs
tools/model-runtime/cli/src/commands/run/: interactive.rs  mod.rs
tools/model-runtime/cli/src/config/: mod.rs
tools/model-runtime/cli/src/ui/: mod.rs  types.rs  utils.rs
tools/model-runtime/cli/src/ui/handlers/: api.rs  websocket.rs
tools/model-runtime/cli/static/js/: settings.js
tools/model-runtime/dflash-ffi/: Cargo.toml
tools/model-runtime/dflash-ffi/src/: lib.rs
tools/model-runtime/engine/: Cargo.toml
tools/model-runtime/engine/src/: lib.rs  model.rs
tools/model-runtime/engine/src/backends/: dflash.rs  mod.rs
tools/model-runtime/server/: Cargo.toml  README.md
tools/model-runtime/server/src/: audio_transcriptions.rs  chat_completion.rs  completion_core.rs  completions.rs  embeddings.rs  gpt_oss_harmony.rs  handler_core.rs  handlers.rs  image_generation.rs  lib.rs  local_ipc.rs  mistralrs_for_server_builder.rs  mistralrs_server_router_builder.rs  openai.rs  openapi_doc.rs  responses.rs  speech_generation.rs  streaming.rs  types.rs  util.rs
tools/model-runtime/server/src/model_adapters/: gemma4.rs  glm47.rs  gpt_oss.rs  mod.rs  native_chat.rs  nemotron.rs  qwen35.rs
tools/model-runtime/server/src/responses_types/: items.rs  resource.rs
(+984 files in other folders)
