[package]
name = "cto-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "multipart", "query", "tokio"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22.1"
chardetng = "0.1.17"
chrono = { version = "0.4.43", features = ["serde"] }
codex-app-server-protocol = { path = "local_crates/codex-app-server-protocol" }
codex-shell-command = { path = "local_crates/codex-shell-command" }
codex-utils-pty = { path = "local_crates/codex-utils-pty" }
crossterm = "0.28.1"
encoding_rs = "0.8.35"
gethostname = "1.1.0"
getrandom = "0.2.17"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rcgen = "0.14.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23.37", default-features = false, features = ["aws-lc-rs"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
shlex = "1.3.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
urlencoding = "2.1.3"
