[package]
name = "ctox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
regex = "1"
pdf-extract = "0.7"
qrcode = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
ureq = "2.12"
url = "2.5"
