[package]
name = "codex-shell-command"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
codex-protocol = { path = "../codex-protocol" }
codex-utils-absolute-path = { path = "../codex-utils-absolute-path" }
once_cell = "1.20.2"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
url = "2"
which = "8"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1.4.1"
