[package]
name = "ctox-engine-runtime"
version.workspace = true
edition.workspace = true
description = "Generic serving layer for CTOX bare-metal model crates. Defines the Model trait that per-model crates (ctox-qwen35-27b, future ctox-llama-70b, etc.) implement, plus serving-side concerns (tokenizer bridge, streaming, KV pool management) that are model-agnostic."
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "ctox_engine_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Optional — only pulled in when the `dflash-backend` feature is enabled,
# which activates the libdflash_run_lib.so FFI production path. See
# `backends::dflash` for the wrapper and the crate-level docs for why
# this is the intermediate production path.
ctox-dflash-ffi = { path = "../dflash-ffi", optional = true }
tokenizers = { workspace = true, features = ["fancy-regex"], optional = true }

# Note: does NOT depend on any specific model crate. Consumers pick
# their models via Cargo feature flags or dynamic dispatch through
# the `Model` / `GenerativeModel` traits.

[features]
default = []
# Enables the DFlash FFI backend — `engine::backends::dflash`. Requires
# a runtime `libdflash_run_lib.so` loaded via `libloading`; this crate
# only links the safe Rust wrapper, not the CUDA stack.
dflash-backend = ["dep:ctox-dflash-ffi", "dep:tokenizers"]
