[package]
name = "ctox-engine-server"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "engine_server_core"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["tokio", "multipart"] }
candle-core.workspace = true
data-url.workspace = true
either.workspace = true
futures.workspace = true
image.workspace = true
indexmap.workspace = true
itertools.workspace = true
base64.workspace = true
engine-core = { workspace = true, features = [
  "utoipa",
] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
url.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"], optional = true }
uuid.workspace = true
openai-harmony = "0.0.8"

accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }

[features]
default = ["swagger-ui"]
swagger-ui = ["dep:utoipa-swagger-ui"]
cuda = ["engine-core/cuda"]
cudnn = ["engine-core/cudnn"]
metal = ["engine-core/metal"]
flash-attn = ["cuda", "engine-core/flash-attn"]
flash-attn-v3 = ["cuda", "engine-core/flash-attn-v3"]
accelerate = ["engine-core/accelerate"]
mkl = ["engine-core/mkl"]
nccl = ["engine-core/nccl"]
ring = ["engine-core/ring"]
